selected all td elements and remove them when clicked

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
     let lastSound = clickSound;
 
     // TODO: 1 - make it such that if any table cell is clicked, the onClick function below is executed
+    document.querySelectorAll('td').forEach(td => {
+      td.addEventListener('click', onClick)
+    })
+
 
     function onClick(ev) {
       lastSound.pause()
@@ -171,7 +175,7 @@
 
       console.log(`ev in onClick ${ev}`)
       // TODO: 2 - REMOVE THE TABLE CELL THAT WAS CLICKED
-
+      ev.target.remove()
     }
   </script>
 </body>
